test/edition/basics/attributeCheck-noArgName.good
attributeCheck-noArgName.chpl:1: error: '@edition' attribute argument must be named
